tests/fixtures/invalid/min_int_list.py
# Cannot call min() with Int, List[int]
x = min(1, [1, 2, 3])
